--- a/packages/regression_model/requirements.txt
+++ b/packages/regression_model/requirements.txt
@@ -7,7 +7,7 @@ pandas==0.23.4
 setuptools==40.6.3
 wheel==0.32.3
 
-# testing requirements
+# testing requirements up
 pytest==5.2.0
 
 # fetching datasets
