--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ matplotlib==3.0.2
 pandas==0.23.4
 scikit-learn==0.20.2
 
-# testing
+# testing pytest up 
 pytest==5.2.0
 
 -r packages/ml_api/requirements.txt
